Use : form of runtime factories consistently in documentation

--- a/_posts/2015-07-08-dumpling-1.0.md
+++ b/_posts/2015-07-08-dumpling-1.0.md
@@ -10,11 +10,11 @@ Dumpling has finally reached version 1.0 lately. What are the coolest features?
 
 One of the most common uses of `groovy` command was filtering the `ThreadSet` based on a predicate. This is now made trivial. Instead of:
 
-    ./dumpling.sh groovy --in ... ... <<< "runtime.threads.grep { it.name.contains 'messaging-14' }"
+    ./dumpling.sh groovy --in ... <<< "runtime.threads.grep { it.name.contains 'messaging-14' }"
 
 one can simply run:
 
-     ./dumpling.sh grep "thread.name.contains 'messaging-14'" --in ... ...
+     ./dumpling.sh grep "thread.name.contains 'messaging-14'" --in ...
 
 ## Generate hotspot-like threaddump listing
 
